--- a/5.Hooks/widgets/.env
+++ b/5.Hooks/widgets/.env
@@ -1,2 +1,3 @@
 REACT_APP_UNSPLASH_KEY=4mHJiU5YwSEvgSRW33TXL-tJ-B7GmfqtM1KkqiI0sjU
 REACT_APP_GOOGLE_KEY=AIzaSyBUmFFe5dt5AvfIOtoDpq4_pjgVQPjMRm0
+REACT_APP_GOOGLE_TRANSLATE_KEY=AIzaSyCHUCmpR7cT_yDFHC98CZJy2LTms-IwDlM
